# swe-harness

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  fix_contract_test.json  prd.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-env-writes.sh  block-push-to-main.sh  block-rm-rf.sh  typecheck-after-edit.sh
docs/adr/: 0001-disk-based-agent-handoffs.md  0002-evaluator-hack-detection-checklist.md  0003-docker-container-lifecycle.md  0004-repo-context-mcp-backend.md  0005-prompt-caching-strategy.md
docs/plans/: PLAN.md
docs/plans/week-1/: 01-core-data-models.md  02-budget-accumulator.md  03-structured-trace-writer.md  04-docker-sandbox.md  05-anthropic-agent-base.md  06-generator-agent.md  07-end-to-end-wire-up.md  08-live-console-output.md  09-patch-extraction.md
docs/plans/week-2/: 01-reproducer-agent.md  02-orchestrator-two-agent.md  03-dev-dataset.md  04-db-eval-columns.md  05-cli-eval-command.md
src/swe_harness/: budget.py  cli.py  db.py  docker_manager.py  models.py  orchestrator.py  tracer.py
src/swe_harness/agents/: base.py  generator.py
tests/: test_agent_base.py  test_budget.py  test_db.py  test_docker_manager.py  test_generator_agent.py  test_models.py  test_orchestrator.py  test_tracer.py
