[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swe-harness"
version = "0.1.0"
description = "Multi-agent harness for autonomous Python bug-fixing"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "docker>=7.0",
    "jedi>=0.19",
    "mcp>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
]

[project.scripts]
swe-harness = "swe_harness.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "types-docker",
]

[tool.hatch.build.targets.wheel]
packages = ["src/swe_harness"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["swe_harness"]
omit = ["tests/*"]
